cros: Virtual Keyboard behavior in the new launcher.

When the searchbox is active and the device is in tablet mode
the virtual keyboard will be shown.

Bug: 740669
Change-Id: I25523b905ced2b5267f08bae56622aac6f8abc18
Reviewed-on: https://chromium-review.googlesource.com/576609
Commit-Queue: Alex Newcomer <newcomer@chromium.org>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Reviewed-by: Yury Khmel <khmel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#489724}
Former-commit-id: ee1e914346a3db5b7e0c59ac5ca31813a4631e84